[tool.poetry]
name = "snek"
version = "0.1.0"
description = "A sneaky python library for working with Vault"
authors = ["Benjamin Hicks <benjamin.w.hicks@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
sphinx-autodoc-typehints = "^1.11.1"
python-dateutil = "^2.8.1"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
docker = "^4.4.0"
isort = "^5.6.4"
mypy = "^0.790"
pytest-mock = "^3.4.0"
Sphinx = "^3.3.1"
jedi = "^0.17.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
markers = [
  "vault: Marks tests that require a dev instance of vault"
]
